# CDR_2

./: .gitignore  README.md  app.py  app_RECU.py  pyproject.toml  requirements.txt  run_app.sh
.github/workflows/: tests.yml
.streamlit/: config.toml
core/: __init__.py
docs/: CORRECCIONES_ETAPA_POSTERIOR.md  COTEJO_DOF.md  FASE1_ARQUITECTURA.md  FASE3_ESTADO_DISENO.md  VERSION_1.md  VERSION_2.md  VERSION_3.md
legacy/: app.py  app.py.backup  app_RECU.py  iniciar_app.command  multi_zones.py  registry.py  run.sh  simple.py
legacy/components/: __init__.py  html_components.py
legacy/core/: annotate.py  depur.py  droop.py  export.py  io.py  merge.py  naming.py  plot.py
normative/: INVESTIGACION_PARAMETROS.md  matriz_pruebas.yaml  parametros_propuestos.yaml
normative/limites/: anexo5_revision_pruebas.yaml  checklist_pruebas_rev3.yaml  tablas_cdr2.yaml
normative/plantillas_usuario/: Checklist_de_Pruebas_REV_1.1.xlsx  Protocolo_Central_v1.2.1.docx  Protocolo_Unidad_v1.2.1.docx  Revisiones_Comentarios_SySCE_v1.0.xlsx
normative/protocolos/: catalogo_central.yaml  catalogo_unidad.yaml
projects/Pruebas_Centrales_v3/: cronograma.json  metadata.json
projects/cnk/: cronograma.json  metadata.json
sitio_html/CDR_2v4/: index_cdr_2v4.html
src/gcv/: __init__.py  models.py  persistence.py
tests/: __init__.py  multi.py
tests/unit/: helpers.py  test_aliases.py  test_cierre_matriz.py  test_comtrade_reader.py  test_e3_pruebas_complejas.py  test_e3b_controles.py  test_engine.py  test_ingestion.py  test_ml_sugerencias.py  (+12 more)
tools/: extraer_catalogo_protocolos.py
(+107 files in other folders)
