[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gcv"
version = "0.2.0"
description = "Sistema de verificación de pruebas de Código de Red (Centrales Eléctricas y Centros de Carga)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "openpyxl>=3.1",
    "comtrade>=0.1",
]

[project.optional-dependencies]
reporting = ["plotly>=5.20", "xlsxwriter>=3.2", "jinja2>=3.1", "python-docx>=1.1", "weasyprint>=61"]
ml = ["scikit-learn>=1.4", "rapidfuzz>=3.6"]
ui = ["streamlit>=1.35"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests/unit"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.ruff]
line-length = 100
src = ["src"]
